// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="so-tag-tag so-tag-small so-tag-default so-tag-bright"
  >
    <span>
      default
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-small so-tag-info so-tag-bright"
  >
    <span>
      info
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-small so-tag-danger so-tag-bright"
  >
    <span>
      danger
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-small so-tag-warning so-tag-bright"
  >
    <span>
      warning
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-small so-tag-success so-tag-bright"
  >
    <span>
      success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-bright"
    >
      <span>
        Tag
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-fill"
    >
      <span>
        Tag
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-outline"
    >
      <span>
        Tag
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-bright-outline"
    >
      <span>
        Tag
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <span>
        default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-bright"
    >
      <span>
        info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-bright"
    >
      <span>
        danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-bright"
    >
      <span>
        warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-bright"
    >
      <span>
        success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-fill"
    >
      <span>
        default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-fill"
    >
      <span>
        info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-fill"
    >
      <span>
        danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-fill"
    >
      <span>
        warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-fill"
    >
      <span>
        success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-outline"
    >
      <span>
        default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-outline"
    >
      <span>
        info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-outline"
    >
      <span>
        danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-outline"
    >
      <span>
        warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-outline"
    >
      <span>
        success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-bright-outline"
    >
      <span>
        default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-bright-outline"
    >
      <span>
        info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-bright-outline"
    >
      <span>
        danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-bright-outline"
    >
      <span>
        warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-bright-outline"
    >
      <span>
        success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-small so-tag-default so-tag-bright"
  >
    <span>
      Small
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <span>
      Default
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-large so-tag-default so-tag-bright"
  >
    <span>
      Large
    </span>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <div
      class="so-tag-inline"
    >
      <span>
        Tag 1
      </span>
    </div>
    <div
      class="so-tag-close-icon"
    >
      <span
        class="so-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <div
      class="so-tag-inline"
    >
      <span>
        Tag 2
      </span>
    </div>
    <div
      class="so-tag-close-icon"
    >
      <span
        class="so-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <div
      class="so-tag-inline"
    >
      <span>
        Tag 3
      </span>
    </div>
    <div
      class="so-tag-close-icon"
    >
      <span
        class="so-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
    style="background: rgb(255, 255, 255); border-style: dashed;"
  >
    <span>
      + New Tag
    </span>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <div
      class="so-tag-inline"
    >
      <span>
        abc
      </span>
    </div>
    <div
      class="so-tag-close-icon"
    >
      <span
        class="so-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <span>
      Default
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-rounded so-tag-default so-tag-bright"
  >
    <span>
      Rounded
    </span>
  </div>
</div>
`;
